Made a few changes on the initiate  workflow method